[package]
name = "rcon_bruteforcer_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
rcon_bruteforcer = { path = "../rcon_bruteforcer" }

[dependencies.clap]
version = "2.33.0"
default-features = false