[package]
name = "rcon_bruteforcer_cli"
version = "0.2.0"
authors = ["Kawaii Neko Lolis <marco@ccbluex.net>", "MoskalykA <vivelafrance1224@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.2.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "cargo"] }
rcon_bruteforcer = { git = "https://github.com/MoskalykA/rcon_bruteforcer.git" }
env_logger = "0.10.0"
log = "0.4.17"